fix(ui): make unsaved changes text readable in light theme

--- a/weblate/static/styles/main.css
+++ b/weblate/static/styles/main.css
@@ -2576,6 +2576,7 @@ table.table-simple tbody#glossary-terms td {
 .text-warning {
   font-size: 14px;
   margin: 5px 5px 0px;
+  color: #8a6d3b !important;
 }
 
 .card label {
